# sp

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE.md  NOTICE.md  README.md  diff  help.md  publicServiceAnnouncement.md
.github/workflows/: release.yml  rust.yml  zizmor.yml
sapphire-cli/: Cargo.toml
sapphire-cli/scripts/: build_autoconf.sh  build_libtool.sh  build_m4.sh
sapphire-cli/src/: cli.rs  install.rs  main.rs  ui.rs
sapphire-cli/src/cli/: args.rs  info.rs  install.rs  mod.rs  search.rs  uninstall.rs  update.rs
sapphire-cli/src/cli/install/: cask.rs  mod.rs
sapphire-cli/src/cli/install/formula/: bottle.rs  mod.rs  source.rs
sapphire-cli/src/cmd/: info.rs  install.rs  mod.rs  search.rs  uninstall.rs  update.rs  upgrade.rs
sapphire-core/: Cargo.toml
sapphire-core/src/: formulary.rs  keg.rs  lib.rs
sapphire-core/src/dependency/: definition.rs  dependency.rs  mod.rs  requirement.rs  resolver.rs
sapphire-core/src/fetch/: api.rs  http.rs  mod.rs  oci.rs
sapphire-core/src/model/: cask.rs  formula.rs  mod.rs  version.rs
sapphire-core/src/tap/: definition.rs  mod.rs  tap.rs
sapphire-core/src/utils/: cache.rs  config.rs  error.rs  mod.rs
sp-aio/: Cargo.toml
sp-aio/src/: checksum.rs  fs.rs  git2.rs  json_io.rs  lib.rs  uninstall.rs
sp-cli/: Cargo.toml
sp-cli/src/: cli.rs  main.rs
sp-cli/src/cli/: info.rs  install.rs  pipeline.rs  reinstall.rs  search.rs  uninstall.rs  update.rs  upgrade.rs
sp-cli/src/cli/install/: cask.rs  mod.rs
sp-cli/src/cli/install/formula/: bottle.rs  mod.rs  source.rs
sp-common/: Cargo.toml
sp-common/src/: cache.rs  config.rs  error.rs  formulary.rs  lib.rs
sp-common/src/dependency/: definition.rs  resolver.rs
sp-common/src/model/: cask.rs  formula.rs  mod.rs  version.rs
sp-core/: Cargo.toml
sp-core/src/: formulary.rs  installed.rs  lib.rs  uninstall.rs  update_check.rs
sp-core/src/dependency/: requirement.rs  resolver.rs
sp-core/src/fetch/: api.rs  http.rs  oci.rs  validation.rs
sp-core/src/model/: cask.rs  formula.rs  version.rs
sp-core/src/tap/: definition.rs
sp-core/src/utils/: cache.rs  config.rs
sp-net/: Cargo.toml
sp-net/src/: lib.rs  validation.rs
sp-net/src/fetch/: api.rs  http.rs  mod.rs  oci.rs
sph-cli/: Cargo.toml
sph-cli/src/: cli.rs  main.rs
sph-cli/src/cli/: info.rs  install.rs  pipeline.rs  reinstall.rs  search.rs  uninstall.rs  update.rs  upgrade.rs
sph-common/: Cargo.toml
sph-common/src/: cache.rs  config.rs  error.rs  formulary.rs  lib.rs
sph-common/src/dependency/: definition.rs  requirement.rs  resolver.rs
sph-common/src/model/: cask.rs  formula.rs  version.rs
sph-core/: Cargo.toml
sph-core/src/: installed.rs  lib.rs  uninstall.rs  update_check.rs
sph-core/src/tap/: definition.rs
sph-net/: Cargo.toml
sph-net/src/: lib.rs  validation.rs
sph-net/src/fetch/: api.rs  http.rs  oci.rs
spm-cli/: Cargo.toml
spm-cli/src/: cli.rs  main.rs
spm-cli/src/cli/: info.rs  search.rs  uninstall.rs  update.rs
spm-cli/src/cli/install/: cask.rs  mod.rs
spm-cli/src/cli/install/formula/: bottle.rs  mod.rs  source.rs
spm-core/: Cargo.toml
spm-core/src/: formulary.rs  keg.rs  lib.rs
spm-core/src/dependency/: definition.rs  mod.rs  requirement.rs  resolver.rs
spm-core/src/fetch/: api.rs  http.rs  mod.rs  oci.rs  validation.rs
spm-core/src/model/: cask.rs  formula.rs  version.rs
spm-core/src/tap/: definition.rs
spm-core/src/utils/: cache.rs  config.rs  error.rs
sps/: Cargo.toml
sps-aio/: Cargo.toml
sps-aio/src/: checksum.rs  extract.rs  fs.rs  git2.rs  json_io.rs  lib.rs  process.rs  uninstall.rs
sps-cli/: Cargo.toml
sps-cli/src/: cli.rs
sps-cli/src/cli/: upgrade.rs
sps-common/: Cargo.toml
sps-common/src/: cache.rs  config.rs  error.rs  formulary.rs  keg.rs  lib.rs  pipeline.rs
sps-common/src/dependency/: definition.rs  requirement.rs  resolver.rs
sps-common/src/model/: artifact.rs  cask.rs  formula.rs  mod.rs  tap.rs  version.rs
sps-core/: Cargo.toml
sps-core/src/: installed.rs  io_manager.rs  lib.rs  uninstall.rs  update_check.rs
sps-core/src/check/: installed.rs  mod.rs  update.rs
sps-core/src/install/: extract.rs  mod.rs
sps-core/src/install/bottle/: exec.rs  link.rs  macho.rs  mod.rs
sps-core/src/install/cask/: dmg.rs  helpers.rs  mod.rs
sps-core/src/install/cask/artifacts/: app.rs  audio_unit_plugin.rs  binary.rs  colorpicker.rs  dictionary.rs  font.rs  input_method.rs  installer.rs  internet_plugin.rs  keyboard_layout.rs  manpage.rs  mdimporter.rs  pkg.rs  preflight.rs  prefpane.rs  qlplugin.rs  screen_saver.rs  service.rs  suite.rs  uninstall.rs  vst3_plugin.rs  vst_plugin.rs  zap.rs
sps-core/src/macos/: applescript.rs  xattr.rs
sps-core/src/pipeline/: engine.rs  worker.rs
sps-core/src/tap/: definition.rs
sps-core/src/uninstall/: cask.rs  common.rs  formula.rs  mod.rs
sps-core/src/upgrade/: bottle.rs  cask.rs  mod.rs  source.rs
sps-core/src/utils/: mod.rs  xattr.rs
sps-net/: Cargo.toml
sps-net/src/: api.rs  http.rs  lib.rs  oci.rs  validation.rs
sps-net/src/fetch/: api.rs  http.rs  oci.rs
sps/src/: cli.rs  main.rs  pipeline.rs
sps/src/cli/: info.rs  init.rs  install.rs  list.rs  pipeline.rs  reinstall.rs  runner.rs  search.rs  status.rs  uninstall.rs  update.rs  upgrade.rs
sps/src/pipeline/: downloader.rs  planner.rs  runner.rs
