[workspace]
resolver = "2"
members = [
    "spm-cli",
    "spm-core",
]

# Optional: Define shared dependencies or profiles here
[workspace.dependencies]
anyhow = "1.0"
thiserror = "2.0.12"
serde = { version = "1.0", features = ["derive"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
