[workspace]
resolver = "3"
members = [
    "sp-cli", "sp-common",
    "sp-core", "sp-net"
]

# Optional: Define shared dependencies or profiles here
[workspace.dependencies]
anyhow = "1.0"
thiserror = "2.0.12"
serde = { version = "1.0", features = ["derive"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
