[workspace]
resolver = "3"
members = [
    "sps-cli",
    "sps-common",
    "sps-core",
    "sps-net",
]

# Shared dependencies defined once
[workspace.dependencies]
anyhow = "1.0.98"
thiserror = "2.0.12"
serde = { version = "1.0.219", features = ["derive"] } # Using the highest specified version and common features
serde_json = "1.0.140" # Used across multiple crates
reqwest = { version = "0.12.15", features = ["json", "stream", "blocking"] } # Combined features from core, net, cli, common
tokio = { version = "1.44.2", features = ["full"] } # Used across cli, core, net
futures = "0.3.31" # Used across cli, core, net
tracing = "0.1.41" # Used across cli, common, core, net
semver = "1.0.26" # Used in common, core
dirs = "6.0.0" # Used in common, core
walkdir = "2.5.0" # Used in cli, core (using highest version)
indicatif = "0.17.11" # Used in cli, core (using highest version)
env_logger = "0.11.8" # Used in cli, core
num_cpus = "1.16.0" # Used in cli, core
object = { version = "0.36.7", features = ["read_core", "write_core", "macho"] } # Used in common, core (combined features)
humantime = "2.2.0" # Used in common, core
bitflags = { version = "2.9.0", features = ["serde"] } # Used in common, core (combined features)
url = "2.5.4" # Used in core, net
sha2 = "0.10.8" # Used in core, net
hex = "0.4.3" # Used in core, net
rand = "0.9.1" # Used in core, net
infer = "0.19.0" # Used in core, net

# Workspace-wide release profile
[profile.release]
lto = true
codegen-units = 1
strip = true
