[package]
name = "sapphire-core"
version = "0.1.0"
edition = "2021"
description = "Core library for the Sapphire package manager"
# repository = "..." # Add your repo URL
# license = "..." # Add your license

[dependencies]
# Inherit from workspace where possible
anyhow = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
serde = { workspace = true }

# Core-specific dependencies (add others identified from moved code)
serde_json = "1.0"
toml = "0.7"
env_logger = "0.10"
dirs = "5.0"
tempfile = "3.5"
walkdir = "2.3"
fs_extra = "1.3"
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
url = "2.3"
git2 = "0.17"
cmd_lib = "1.3"
sha2 = "0.10"
indicatif = "0.17"
regex = "1.8"
glob = "0.3"
futures = "0.3" # Added based on install.rs usage
semver = "1.0" # Added for error.rs

# Added from check errors
chrono = { version = "0.4", features = ["serde"] } # Added serde feature for potential use
num_cpus = "1.15"
humantime = "2.1"
