[package]
name = "sapphire-core"
version = "0.1.0"
edition = "2021"
description = "Core library for the Sapphire package manager"
# repository = "..." # Add your repo URL
# license = "..." # Add your license

[dependencies]
# Inherit from workspace where possible
anyhow = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
serde = { version = "1.0", features = ["derive"] }

# Core-specific dependencies (add others identified from moved code)
serde_json = "1.0"
devtools = "0.3.3"
toml = "0.8.20"
env_logger = "0.11.8"
which = "7.0.3"
semver = "1.0.26"
dirs = "6.0"
walkdir = "2.3"
fs_extra = "1.3"
reqwest = { version = "0.12.15", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
url = "2.3"
git2 = "0.20.1"
cmd_lib = "1.3"
sha2 = "0.10"
tempfile = "3.19.1"
indicatif = "0.17"
regex = "1.8"
glob = "0.3"
rc = "0.1.1"
futures = "0.3" # Added based on install.rs usage

# Added from check errors
chrono = { version = "0.4", features = ["serde"] } # Added serde feature for potential use
num_cpus = "1.15"
humantime = "2.1"
bitflags = { version = "2.9.0", features = ["serde"] }
