[package]
name = "sp-cli"
version = "0.1.0"
edition = "2024"
description = "Command-line interface for sp"
repository = "https://github.com/alexykn/sp"
license = "BSD-3 Clause"

[[bin]]
name = "sp"
path = "src/main.rs"

[dependencies]
sp-core = { path = "../sp-core" }
sp-net = { path = "../sp-net" }
sp-common ={ path = "../sp-common" }

# Inherit from workspace
serde = { workspace = true }
thiserror = { workspace = true }

# CLI specific dependencies
clap = { version = "4.3", features = ["derive"] }
colored = "3.0.0"
spinners = "4.1"
dialoguer = "0.11.0"
indicatif = "0.17"
env_logger = "0.11.8"
prettytable-rs = "0.10"
serde_json = "1.0"
walkdir = "2.3"
reqwest = "0.12.15"
tokio = { version = "1.44.2", features = ["full"] }
futures = "0.3.31"
terminal_size = "0.4.2"
textwrap      = "0.16"
unicode-width = "0.2.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
crossbeam-channel = "0.5.15"
threadpool = "1.8.1"
once_cell = "1.21.3" # For the Lazy semaphore
num_cpus = "1.16.0" # For default queue/worker sizing
tracing-appender = "0.2.3"

[build-dependencies]
clap_complete = "4.3"
