[package]
name = "sp-net"
version = "0.1.0"
edition = "2024"
description = "Networking library for sp"
repository = "https://github.com/alexykn/sp"
license = "BSD-3 Clause"

[dependencies]
# Async runtime
tokio = { version = "1.44.2", features = ["full"] } # Or specific features needed
futures = "0.3.31"
reqwest = { version = "0.12.15", features = ["json", "stream"] } # Check current version
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
oci-distribution = { version = "0.11.0", optional = true } # Or similar crate used
rand = "0.9.1"
url = "2.5.4"
sha2 = "0.10.8"
hex = "0.4.3"
infer = "0.19.0" # For content type validation
tracing = "0.1.41" 

sp-common = { path = "../sp-common" } # Need SpError, Config, maybe models
