[package]
name = "sps-aio"
version = "0.1.0"
edition = "2024"
description = "IO operations for sp (cache, manifests, checksums, config loading)"
repository = "https://github.com/alexykn/sp"
license = "BSD-3 Clause"

[dependencies]

sps-common = "0.1.0"
serde = "1.0.219"
serde_json = "1.0.140"
thiserror = "2.0.12"
tracing = "0.1.41"
dirs = "6.0.0" # For cache/config default paths
sha2 = "0.10.8" # For checksums
hex = "0.4.3" # For checksums
tempfile = "3.19.1" # For atomic writes

humantime = "2.2.0"
git2 = "0.20.1"