[package]
name        = "sps-aio"
version     = "0.1.1"
edition     = "2021"
authors     = [
    "Alexander Knott <alexander.knott@posteo.de>",
    "sps contributors"
]
description = "Io library for the sps package manager"
repository  = "https://github.com/alexykn/sps"
license     = "BSD-3-Clause"

[dependencies]

sps-common = "0.1.0"
serde = "1.0.219"
serde_json = "1.0.140"
thiserror = "2.0.12"
tracing = "0.1.41"
dirs = "6.0.0" # For cache/config default paths
sha2 = "0.10.9" # For checksums
hex = "0.4.3" # For checksums
tempfile = "3.19.1" # For atomic writes
tokio = { version = "1.44.2", features = ["full"] }
libc = "0.2.172"
flate2 = "1.1.1"
xz2 = "0.1.7"
tokio-tar = "0.3.1"
async_zip = "0.0.17"
tar = "0.4.44"
zip = "2.6.1"
bzip2        = "0.5.2"          # <-- add this
futures-util = "0.3.31" 
futures = "0.3.31"         # resolves StreamExt

humantime = "2.2.0"
git2 = "0.20.1"
trash = "5.2.2"