[package]
name        = "sps-common"
version     = "0.1.0"
edition     = "2021"
authors     = [
    "Alexander Knott <alexander.knott@posteo.de>",
    "sps contributors"
]
description = "Shared utilities for the sps package manager"
repository  = "https://github.com/alexykn/sps"
license     = "BSD-3-Clause"

[dependencies]
# Inherited from workspace
thiserror = { workspace = true }
reqwest = { workspace = true }
object = { workspace = true }
semver = { workspace = true }
serde_json = { workspace = true }
dirs = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
humantime = { workspace = true }
bitflags = { workspace = true }