[package]
name = "sps-common"
version = "0.1.44"
edition = "2021"
authors = ["Alexander Knott <alexander.knott@posteo.de>", "sps contributors"]
description = "Shared utilities for the sps package manager"
repository = "https://github.com/alexykn/sps"
license = "BSD-3-Clause"

[dependencies]
# Inherited from workspace
serde_json = "1.0.140"
directories = "6.0.0"                                                            # For user/system directories
tracing = "0.1.41"
serde = { version = "1.0.219", features = ["derive"] }
humantime = "2.2.0"
bitflags = { version = "2.9.1", features = ["serde"] }
thiserror = "2.0.12"
reqwest = { version = "0.12.15", features = ["json", "stream", "blocking"] }
object = { version = "0.36.7", features = ["read_core", "write_core", "macho"] }
semver = { version = "1.0.26", features = ["serde"] }
git2 = "0.20.2"
