[package]
name        = "sps-core"
version     = "0.1.0"
edition     = "2021"
authors     = [
    "Alexander Knott <alexander.knott@posteo.de>",
    "sps contributors"
]
description = "Core library for the sps package manager"
repository  = "https://github.com/alexykn/sps"
license     = "BSD-3-Clause"
readme      = "README.md"
keywords    = ["package-manager", "macos", "homebrew"]
categories  = ["development-tools", "command-line-utilities"]

[dependencies]
sps-net = { path = "../sps-net" }
sps-common = { path = "../sps-common" }

# Inherited from workspace
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
env_logger = { workspace = true }
semver = { workspace = true }
dirs = { workspace = true }
walkdir = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
sha2 = { workspace = true }
indicatif = { workspace = true }
hex = { workspace = true }
object = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
rand = { workspace = true }
infer = { workspace = true }
num_cpus = { workspace = true }
humantime = { workspace = true }
bitflags = { workspace = true }
tracing = { workspace = true }

devtools = "0.3.3"
which = "7.0.3"
toml = "0.8.21"
fs_extra = "1.3"
git2 = "0.20.1"
cmd_lib = "1.9.5"
tempfile = "3.19.1"
regex = "1.11.1"
glob = "0.3.2"
flate2 = "1.1.1"
bzip2 = "0.5.2"
xz2 = "0.1.7"
tar = "0.4.44"
zip = "2.6.1"
chrono = { version = "0.4.40", features = ["serde"] }
async-recursion = "1.1.1"