[package]
name = "sps-core"
version = "0.1.2"
edition = "2021"
authors = ["Alexander Knott <alexander.knott@posteo.de>", "sps contributors"]
description = "Core library for the sps package manager"
repository = "https://github.com/alexykn/sps"
license = "BSD-3-Clause"

[dependencies]
sps-net = "0.1.2"
sps-common = "0.1.2"

anyhow = "1.0.98"
uuid = { version = "1.16.0", features = ["v4"] }
plist = "1.7.1"                                                                  # For reading Info.plist to get bundle ID
thiserror = "2.0.12"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
env_logger = "0.11.8"
semver = "1.0.26"
dirs = "6.0.0"
xattr = "1.5.0"
walkdir = "2.5.0"
reqwest = { version = "0.12.15", features = ["json", "stream", "blocking"] }
url = "2.5.4"
sha2 = "0.10.9"
indicatif = "0.17.11"
hex = "0.4.3"
object = { version = "0.36.7", features = ["read_core", "write_core", "macho"] }
tokio = { version = "1.45.0", features = ["full"] }
futures = "0.3.31"
rand = "0.9.1"
infer = "0.19.0"
num_cpus = "1.16.0"
humantime = "2.2.0"
bitflags = { version = "2.9.0", features = ["serde"] }
tracing = "0.1.41"
devtools = "0.3.3"
which = "7.0.3"
toml = "0.8.22"
fs_extra = "1.3.0"
git2 = "0.20.2"
cmd_lib = "1.9.5"
tempfile = "3.20.0"
regex = "1.11.1"
glob = "0.3.2"
flate2 = "1.1.1"
bzip2 = "0.5.2"
xz2 = "0.1.7"
tar = "0.4.44"
zip = "2.6.1"
chrono = { version = "0.4.41", features = ["serde"] }
async-recursion = "1.1.1"
crossbeam-channel = "0.5.15"
threadpool = "1.8.1"
trash = "5.2.2"
lazy_static = "1.5.0"
