[package]
name        = "sps-net"
version     = "0.1.2"
edition     = "2021"
authors     = [
    "Alexander Knott <alexander.knott@posteo.de>",
    "sps contributors"
]
description = "Networking library for the sps package manager"
repository  = "https://github.com/alexykn/sps"
license     = "BSD-3-Clause"

[dependencies]

tokio = { version = "1.44.2", features = ["full"] }
futures = "0.3.31"
reqwest = { version = "0.12.15", features = ["json", "stream", "blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
rand = "0.9.1"
url = "2.5.4"
sha2 = "0.10.9"
hex = "0.4.3"
infer = "0.19.0"
tracing = "0.1.41"
sps-common = "0.1.2"

oci-distribution = { version = "0.11.0", optional = true }