[package]
name = "sps-net"
version = "0.1.55"
edition = "2021"
authors = ["Alexander Knott <alexander.knott@posteo.de>", "sps contributors"]
description = "Networking library for the sps package manager"
repository = "https://github.com/alexykn/sps"
license = "BSD-3-Clause"

[dependencies]
sps-common = "0.1.55"

tokio = { version = "1.45.0", features = ["full"] }
futures = "0.3.31"
reqwest = { version = "0.12.15", features = ["json", "stream", "blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
rand = "0.9.1"
url = "2.5.4"
sha2 = "0.10.9"
hex = "0.4.3"
infer = "0.19.0"
tracing = "0.1.41"

oci-distribution = { version = "0.11.0", optional = true }
