[package]
name        = "sps"
version     = "0.1.0"
edition     = "2021"
authors     = [
    "Alexander Knott <alexander.knott@posteo.de>",
    "sps contributors"
]
description = "Package Manager for macOS"
repository  = "https://github.com/alexykn/sps"
license     = "BSD-3-Clause"
readme      = "README.md"
keywords    = ["package-manager", "macos", "homebrew"]
categories  = ["development-tools", "command-line-utilities"]

[[bin]]
name = "sps"
path = "src/main.rs"

[dependencies]
# Direct dependencies (previously workspace inherited)
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
serde_json = "1.0.140"
reqwest = { version = "0.12.15", features = ["json", "stream", "blocking"] }
tokio = { version = "1.44.2", features = ["full"] }
futures = "0.3.31"
tracing = "0.1.41"
walkdir = "2.5.0"
indicatif = "0.17.11"
env_logger = "0.11.8"
num_cpus = "1.16.0"

# CLI specific dependencies
clap = { version = "4.5.37", features = ["derive"] }
colored = "3.0.0"
spinners = "4.1.1"
dialoguer = "0.11.0"
prettytable-rs = "0.10.0"
terminal_size = "0.4.2"
textwrap = "0.16.2"
unicode-width = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
crossbeam-channel = "0.5.15"
threadpool = "1.8.1"
once_cell = "1.21.3"
tracing-appender = "0.2.3"
sps-common = "0.1.0"
sps-net    = "0.1.0"
sps-core   = "0.1.0"

[build-dependencies]
clap_complete = "4.5.48"